[package]
name = "hetspmd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.7", features = ["extension-module"] }
smallvec = { version = "1", features = ["union", "const_generics", "specialization", "may_dangle"] }
float-ord = "0.3"
ctrlc = "3.2"
